fixed overlap on home page

--- a/projectsPage.css
+++ b/projectsPage.css
@@ -80,6 +80,14 @@ input{
     justify-content: center;
 }
 
+/* used for projects.js in index.php to make the text show beside the image in the cards*/
+.img-box2 {
+    width: 100%;
+    height: 176px;
+    align-items: center;
+    justify-content: center;
+}
+
 .images {
     max-height: 90%;
     max-width: 90%;
